# DSA

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  _config.yml  aiw_workflow_convention_hooks_issue.md  aiw_workflow_discovery_issue.md  astro.config.mjs  docker-compose.yml  drizzle.config.ts  index.md  notes-style.tex  package-lock.json  package.json  pyproject.toml  requirements-dev.txt
.claude/: README.md
_data/: chapters.yml
_includes/: nav.html
_layouts/: default.html  pdf.html
agent_docs/: long_running_pattern.md
assets/: style.css
cheat_sheets/: ch_1.tex  ch_2.tex  ch_3.tex  ch_4.tex  ch_5.tex  ch_6.tex
cheats/: ch_1.md  ch_10.md  ch_11.md  ch_12.md  ch_13.md  ch_2.md  ch_3.md  ch_4.md  ch_5.md  ch_6.md  ch_7.md  ch_9.md
coding_practice/: CMakeLists.txt  main.cpp
cs300/: __init__.py
design_docs/: architecture.md  build_sweep.md  m2_raw_passthrough_sweep.md  m3_deploy_verification.md  m_05_02_implementation_audit.md  m_ux_deploy_verification.md  nice_to_have.md  pandoc_probe.md  phase2_issues.md  roadmap_addenda.md
drizzle/: 0000_tiny_bug.sql
lectures/: ch_1.md  ch_10.md  ch_11.md  ch_12.md  ch_13.md  ch_2.md  ch_3.md  ch_4.md  ch_5.md  ch_6.md  ch_7.md  ch_9.md
notes/: ch_1.md  ch_10.md  ch_11.md  ch_12.md  ch_13.md  ch_2.md  ch_3.md  ch_4.md  ch_5.md  ch_6.md  ch_7.md  ch_9.md
practice_prompts/: ch_1.md  ch_2.md  ch_3.md  ch_4.md  ch_5.md  ch_6.md
resources/: week_2.tex  week_4.tex  week_5.tex
runs/: autopilot-20260502T155221Z-iter1-shipped.md  autopilot-20260502T155221Z-iter1.md  (+2 more)
(+331 files in other folders)
